# p73_walker_controller

./: README.md
logging/: logging_plot.py  logging_plot_actuatornet.py  logging_plot_chirp.py  logging_plot_clik.py  logging_plot_jointpd.py  logging_plot_se.py
p73_controller/: CMakeLists.txt  package.xml
p73_controller/include/p73_controller/: p73_controller.h  state_estimator.h
p73_controller/launch/: realrobot.launch.py  simulation.launch.py
p73_controller/src/: main.cpp  p73_controller.cpp  shm_reset.cpp  state_estimator.cpp
p73_lib/: CMakeLists.txt  package.xml
p73_lib/include/: math_type_define.h  qp.h  wholebody_functions.h
p73_lib/include/p73_lib/: 4bar_jac_func.h  link.h  p73.h  robot_data.h
p73_lib/src/: 4bar_jac_func.cpp  link.cpp  qp.cpp  wholebody_functions.cpp
p73_lib/src/actuatornet_models/: p73_left_ankle.onnx  p73_left_ankle_pitch.onnx  p73_left_ankle_roll.onnx  p73_left_hip_pitch.onnx  p73_left_hip_roll.onnx  p73_left_hip_yaw.onnx  p73_left_knee_pitch.onnx  p73_lstm_left_ankle_pitch.onnx  p73_lstm_left_ankle_roll.onnx  p73_lstm_left_hip_pitch.onnx  p73_lstm_left_hip_roll.onnx  p73_lstm_left_hip_yaw.onnx  p73_lstm_left_knee_pitch.onnx  p73_lstm_right_ankle_pitch.onnx  p73_lstm_right_ankle_roll.onnx  p73_lstm_right_hip_pitch.onnx  p73_lstm_right_hip_roll.onnx  p73_lstm_right_hip_yaw.onnx  p73_lstm_right_knee_pitch.onnx  p73_right_ankle.onnx  p73_right_ankle_pitch.onnx  p73_right_ankle_roll.onnx  p73_right_hip_pitch.onnx  p73_right_hip_roll.onnx  p73_right_hip_yaw.onnx  p73_right_knee_pitch.onnx
p73_msgs/: CMakeLists.txt  package.xml
p73_msgs/msg/: IKTaskCmd.msg  PosCmd.msg  TaskCmd.msg
