<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>p73_lib</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="yong@todo.todo">yong</maintainer>
  <license>Apache-2.0</license>

  <depend>rclcpp</depend>
  <depend>p73_msgs</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>eigen</depend>
  <depend>pinocchio</depend>
  <depend>osqp</depend>
  <depend>OsqpEigen</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2</depend>
  <depend>geometry_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
